--- a/app/src/main/res/layout/activity_chat_bot.xml
+++ b/app/src/main/res/layout/activity_chat_bot.xml
@@ -76,18 +76,42 @@
 
             </ListView>
 
-            <ImageView
-                android:layout_width="100dp"
+            <LinearLayout
+                android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 android:layout_weight="6"
-                android:background="@drawable/round_box4"
-                android:layout_marginRight="15dp"
-                android:layout_marginTop="10dp"
-                android:layout_marginLeft="10dp"
-                android:layout_marginBottom="10dp"
-                android:src="@drawable/icon_send"
-                android:padding="7dp"
-                android:layout_gravity="right"/>
+                android:orientation="horizontal"
+                >
+
+                <TextView
+                    android:id="@+id/tv_chat"
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:layout_weight="1"
+                    android:textColor="@color/titleColor"
+                    android:gravity="center"
+                    android:textSize="20dp"
+                    android:layout_marginTop="10dp"
+                    android:layout_marginLeft="15dp"
+                    android:layout_marginBottom="10dp"
+                    android:fontFamily="@font/noto_jp"
+                    android:background="@drawable/round_box2"
+                    />
+
+                <ImageView
+                    android:id="@+id/btn_send"
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:layout_weight="2.3"
+                    android:background="@drawable/round_box4"
+                    android:layout_marginRight="15dp"
+                    android:layout_marginTop="10dp"
+                    android:layout_marginLeft="10dp"
+                    android:layout_marginBottom="10dp"
+                    android:src="@drawable/icon_send"
+                    android:padding="7dp"
+                    android:layout_gravity="center"/>
+            </LinearLayout>
 
 
         </LinearLayout>
@@ -100,6 +124,7 @@
             android:orientation="horizontal">
 
             <LinearLayout
+                android:id="@+id/btn_stt"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 android:layout_weight="1"
@@ -118,6 +143,7 @@
             </LinearLayout>
 
             <LinearLayout
+                android:id="@+id/btn_ocr"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 android:layout_weight="1"
