--- a/app/src/main/res/layout/ocr_dialog.xml
+++ b/app/src/main/res/layout/ocr_dialog.xml
@@ -13,49 +13,15 @@
         android:layout_gravity="center"
         android:layout_marginTop="30dp"
         android:layout_marginBottom="10dp"
-        android:orientation="horizontal"
-        android:background="@drawable/round_box5" />
+        android:background="@drawable/round_box5"
+        android:orientation="horizontal" />
 
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginLeft="40dp"
         android:fontFamily="@font/godo"
-        android:text="일본한자"
-        android:textColor="#91B8B4"
-        android:textSize="18dp" />
-
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="80dp"
-        android:layout_gravity="center"
-        android:gravity="center"
-        android:orientation="horizontal">
-
-        <androidx.appcompat.widget.AppCompatButton
-            android:layout_width="70dp"
-            android:layout_height="70dp"
-            android:background="@drawable/round_box2" />
-
-        <androidx.appcompat.widget.AppCompatButton
-            android:layout_width="70dp"
-            android:layout_height="70dp"
-            android:layout_marginLeft="7dp"
-            android:layout_marginRight="7dp"
-            android:background="@drawable/round_box2" />
-
-        <androidx.appcompat.widget.AppCompatButton
-            android:layout_width="70dp"
-            android:layout_height="70dp"
-            android:background="@drawable/round_box2" />
-    </LinearLayout>
-
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginLeft="40dp"
-        android:fontFamily="@font/godo"
-        android:text="히라가나/가타카나"
+        android:text="인식결과"
         android:textColor="#91B8B4"
         android:textSize="18dp" />
 
@@ -63,47 +29,63 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content">
 
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="80dp"
+        <FrameLayout
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
             android:layout_gravity="center"
-            android:gravity="center"
-            android:orientation="horizontal">
+            android:gravity="center">
+
 
             <androidx.appcompat.widget.AppCompatButton
-                android:layout_width="70dp"
-                android:layout_height="70dp"
-                android:background="@drawable/round_box2" />
+                android:id="@+id/ocrResult"
+                android:layout_width="150dp"
+                android:layout_height="150dp"
+                android:layout_margin="20dp"
+                android:background="@drawable/round_box2"
+                android:text=""
+                android:textSize="100dp"
+                android:textColor="@color/titleColor"
+                android:textStyle="bold"
+                android:gravity="center"/>
 
-            <androidx.appcompat.widget.AppCompatButton
-                android:layout_width="70dp"
-                android:layout_height="70dp"
-                android:layout_marginLeft="7dp"
-                android:layout_marginRight="7dp"
-                android:background="@drawable/round_box2" />
+        </FrameLayout>
 
-            <androidx.appcompat.widget.AppCompatButton
-                android:layout_width="70dp"
-                android:layout_height="70dp"
-                android:background="@drawable/round_box2" />
-        </LinearLayout>
 
-            <androidx.appcompat.widget.AppCompatImageButton
-                android:id="@+id/btn_dialog_finish"
-                android:layout_width="50dp"
-                android:layout_height="50dp"
-                android:background="@drawable/round_box4"
-                android:layout_gravity="right|center"
-                android:layout_marginRight="5dp"
-                />
+        <androidx.appcompat.widget.AppCompatImageButton
+            android:id="@+id/btn_dialog_finish"
+            android:layout_width="50dp"
+            android:layout_height="50dp"
+            android:layout_gravity="right|bottom"
+            android:layout_marginRight="5dp"
+            android:layout_marginBottom="20dp"
+            android:background="@drawable/round_box4" />
 
-            <ImageView
-                android:layout_width="50dp"
-                android:layout_height="50dp"
-                android:src="@drawable/icon_check"
-                android:layout_gravity="right|center"
-                android:padding="5dp"
-                android:layout_marginRight="5dp"/>
+        <ImageView
+            android:layout_width="50dp"
+            android:layout_height="50dp"
+            android:layout_gravity="right|bottom"
+            android:layout_marginRight="5dp"
+            android:padding="5dp"
+            android:layout_marginBottom="20dp"
+            android:src="@drawable/icon_check" />
+
+        <androidx.appcompat.widget.AppCompatImageButton
+            android:id="@+id/btn_dialog_cancel"
+            android:layout_width="50dp"
+            android:layout_height="50dp"
+            android:layout_gravity="right|bottom"
+            android:layout_marginRight="5dp"
+            android:layout_marginBottom="80dp"
+            android:background="@drawable/round_box7" />
+
+        <ImageView
+            android:layout_width="50dp"
+            android:layout_height="50dp"
+            android:layout_gravity="right|bottom"
+            android:layout_marginRight="5dp"
+            android:padding="5dp"
+            android:layout_marginBottom="80dp"
+            android:src="@drawable/icon_cancel" />
     </FrameLayout>
 
 
