--- a/app/src/main/res/layout/activity_chat_bot.xml
+++ b/app/src/main/res/layout/activity_chat_bot.xml
@@ -70,6 +70,7 @@
             android:orientation="vertical">
 
             <ListView
+                android:id="@+id/lv_chat_view"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 android:layout_weight="1">
