--- a/app/src/main/res/layout/activity_chat_bot.xml
+++ b/app/src/main/res/layout/activity_chat_bot.xml
@@ -112,6 +112,20 @@
                     android:src="@drawable/icon_send"
                     android:padding="7dp"
                     android:layout_gravity="center"/>
+                <ImageView
+                    android:id="@+id/btn_teach"
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:layout_weight="2.3"
+                    android:visibility="gone"
+                    android:background="@drawable/round_box4"
+                    android:layout_marginRight="15dp"
+                    android:layout_marginTop="10dp"
+                    android:layout_marginLeft="10dp"
+                    android:layout_marginBottom="10dp"
+                    android:src="@drawable/icon_send"
+                    android:padding="7dp"
+                    android:layout_gravity="center"/>
             </LinearLayout>
 
 
