--- a/app/src/main/res/layout/chat_daara.xml
+++ b/app/src/main/res/layout/chat_daara.xml
@@ -1,65 +1,97 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:orientation="horizontal"
-    android:padding="10dp">
+    android:orientation="horizontal">
 
     <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="150dp"
-        android:layout_weight="3"
+        android:layout_height="110dp"
+        android:layout_weight="3.9"
+        android:gravity="center"
         android:orientation="vertical"
-        android:gravity="center">
+        android:paddingLeft="5dp">
+
         <ImageView
-            android:layout_width="90dp"
-            android:layout_height="90dp"
+            android:layout_width="70dp"
+            android:layout_height="70dp"
             android:src="@drawable/daara_icon" />
+
         <ImageButton
             android:layout_width="40dp"
             android:layout_height="40dp"
-            android:src="@drawable/icon_sound"
+            android:background="#00ffffff"
             android:scaleType="centerCrop"
-            android:background="#00ffffff"/>
+            android:src="@drawable/icon_sound" />
 
     </LinearLayout>
-    <LinearLayout
+
+    <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
-        android:layout_height="150dp"
+        android:layout_height="wrap_content"
         android:layout_weight="1"
-        android:orientation="vertical">
-        <TextView
+        android:orientation="horizontal">
+
+        <LinearLayout
+            android:id="@+id/linearLayout2"
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:layout_weight="4"
-            android:text="Mr.다아라"
-            android:fontFamily="@font/godo"
-            android:textColor="#91B8B4"
-            android:textSize="20dp"
-            android:gravity="center|left"
-            android:layout_marginTop="10dp"/>
-        <FrameLayout
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:layout_weight="1"
-            android:layout_marginBottom="10dp">
-            <ImageView
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:src="@drawable/chat_background_daara"
-                android:scaleType="fitCenter"/>
+            android:layout_height="110dp"
+            android:orientation="vertical"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent">
+
             <TextView
-                android:layout_width="match_parent"
+                android:layout_width="240dp"
                 android:layout_height="match_parent"
-                android:text="会話を始めましょう。"
-                android:fontFamily="@font/noto_jp"
-                android:gravity="center"
-                android:textColor="@color/white"
-                android:textSize="21dp"
-                android:paddingLeft="15dp"/>
+                android:layout_weight="3"
+                android:fontFamily="@font/godo"
+                android:gravity="center|left"
+                android:text="Mr.다아라"
+                android:textColor="#91B8B4"
+                android:textSize="20dp" />
 
-        </FrameLayout>
+            <FrameLayout
+                android:layout_width="250dp"
+                android:layout_height="match_parent"
+                android:layout_marginBottom="10dp"
+                android:layout_weight="1">
 
-    </LinearLayout>
+                <ImageView
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:scaleType="fitXY"
+                    android:src="@drawable/chat_background_daara"
+                    />
+
+                <TextView
+                    android:id="@+id/tv_daara"
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:fontFamily="@font/noto_jp"
+                    android:gravity="center"
+                    android:paddingLeft="15dp"
+                    android:text="会話を始めましょう。"
+                    android:textColor="@color/white"
+                    android:textSize="18dp" />
+
+            </FrameLayout>
+
+        </LinearLayout>
+
+        <ImageButton
+            android:layout_width="35dp"
+            android:layout_height="35dp"
+            android:background="@drawable/icon_translate"
+            android:scaleType="centerCrop"
+            android:backgroundTint="#91B8B4"
+            app:layout_constraintBottom_toBottomOf="@+id/linearLayout2"
+            app:layout_constraintEnd_toEndOf="@+id/linearLayout2"
+            app:layout_constraintStart_toStartOf="@+id/linearLayout2"
+            app:layout_constraintTop_toTopOf="@+id/linearLayout2"
+            app:layout_constraintHorizontal_bias="0.9"
+            app:layout_constraintVertical_bias="0.9"/>
+    </androidx.constraintlayout.widget.ConstraintLayout>
 
 </LinearLayout>
